--- a/Portfolio/login.html
+++ b/Portfolio/login.html
@@ -8,13 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <style>
-        .material-symbols-outlined {
-          font-variation-settings:
-          'FILL' 0,
-          'wght' 400,
-          'GRAD' 0,
-          'opsz' 24
-        }
+        
 
         table {
             border-collapse: collapse;
@@ -36,7 +30,7 @@
         img {
             max-width: 100%;
             height: auto;
-            border-radius: 50%; /* Make the image round */
+            border-radius: 50%; 
             margin-top: 20px;
         }
         </style>
