--- a/Lab/Ex1login.html
+++ b/Lab/Ex1login.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Login/EX1/07.08.24</title>
     <link rel="icon" type="image/png" href="background.jpg">
     <link rel="stylesheet" href="Ex1.css">
 </head>
 <body>
-    <label>Login</label>
+    <label style="font-size: 40; color:white">Login</label>
     <form onsubmit="return loginUser()">
         <input type="text" id="username" placeholder="Username"/>
         <input type="password" id="password" placeholder="Password"/>
