--- a/Lab/Ex1signup.html
+++ b/Lab/Ex1signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registration</title>
+    <title>Registration/EX1/07.08.24</title>
     <link rel="stylesheet" href="Ex1.css">
 </head>
 <body>
